<resources>
    <string name="app_name">UD Case App</string>
    <string name="tv_db_form">DEAD BODY INFORMATION FORM</string>
    <string name="hint1">Enter Something</string>
    <string name="tv1">District/ Commissionerate</string>
    <string name="tv2">District</string>
    <string name="tv3">U.D.Case Reference</string>
    <string name="tv4">P.S.</string>
    <string name="tv5">FIR No</string>
    <string name="tv6">Date &amp; Time </string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ud_case_number">U.D.Case Number</string>
    <string name="fir_sec">FIR Sections </string>
    <string name="gd_reference">GD Reference </string>
    <string name="inquest_Officer">Name of Inquest Officer</string>
    <string name="place_where_dead_body_found">* Place where dead body was found </string>
    <string name="ud_case_officer_name">Name of UD Case Officer </string>
    <string name="ud_case_officer_contact_no">Phone No of UD Case Officer</string>
    <string name="case_details"> Case Details </string>
    <string name="victim_details"> Victim Details </string>
    <string name="dead_body_details"> Details of Dead Body </string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="details_of_injury_mark">Details of Injury Mark</string>
    <string name="details_of_mark">Details of  Mark</string>
    <string name="wearing_apparels">Wearing Apparels</string>
    <string name="personal_items_of_the_body">Personal Items of the Body</string>
    <string name="personal_items_of_the_body_hint">Enter all items found with/on the body</string>
    <string name="general_condition">* General Condition</string>
    <string name="photograph_of_body_at_po"> Enter the proper photograph of the body </string>
    <string name="any_visible_identification_marks">All visible identification marks on body with their photographs</string>
    <string name="poc_image">Place of occurrence</string>
    <string name="any_visible_identification_marks_hint">Enter all visible identification marks</string>
    <string name="photographs_"> Photographs Related to Dead Body </string>
    <string name="photographs_and_fingerprint"> Photographs Related to Dead Body </string>
    <string name="fingerprint"> Fingerprint </string>
    <string name="uploading_photograph_from_different_angles">Uploading photograph from different angles</string>
    <string name="uploading_fingerprints">uploading fingerprints</string>
    <string name="rv_case_id">UD Case Number : </string>
    <string name="rv_case_dt">Date &amp; Time</string>
    <string name="rv_case_dt_list">Date : </string>
    <string name="rv_psname">Police Station Name</string>
    <string name="rv_psname_list">Police Station Name : </string>
    <string name="rv_place">Place : </string>
    <string name="rv_officer_phn_number">UD Officer Contact Number : </string>
    <string name="rv_ud_officer_name">UD Officer Name : </string>
    <string name="acknowledged">© Curated by CID WestBengal Modified</string>
    <string name="unnatural_death_case_app_nwest_bengal">Unnatural Death Case App \nWest Bengal</string>
    <string name="todo">TODO</string>
    <string name="sign_in">Sign in</string>
    <string name="identified">Identifyed</string>
</resources>