<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:id="@+id/ll_info_morge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">
            <!--<ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:background="@drawable/circular_bg"/>-->
            <!--<androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                card_view:cardCornerRadius="50dp"
                card_view:cardPreventCornerOverlap="false">

                <ImageView
                    android:id="@+id/iv_imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/text_blue"
                     />
            </androidx.cardview.widget.CardView>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/tv_indentify_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/identified"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/case_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/rv_case_id"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_case_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/rv_case_id"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />
</LinearLayout>
                <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <TextView
           android:id="@+id/tv_psname_text"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="10dp"
           android:text="@string/rv_psname_list"
           android:textSize="14sp"
           android:textStyle="bold" />
       <TextView
           android:id="@+id/tv_psname"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="10dp"
           android:text="@string/rv_psname"
           android:textSize="14sp"
           android:textStyle="bold" />
   </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_ud_officer_name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/rv_ud_officer_name"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tv_ud_officer_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/rv_ud_officer_name"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_ud_officer_phn_number_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/rv_officer_phn_number"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tv_ud_officer_phn_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/rv_officer_phn_number"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_pplace_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/rv_place"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tv_pplace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/rv_place"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_case_date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/rv_case_dt_list"
                        android:textColor="@color/text_blue"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tv_case_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/rv_case_dt"
                        android:textColor="@color/text_blue"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>