<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
  >

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fefefe"
        tools:context=".LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/side_nav_bar" />


        <ImageView
            android:id="@+id/iv_cur"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="170dp"
            android:background="@drawable/allowaccess_button_normal"
            android:contentDescription="@string/todo" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:src="@drawable/wbp_logo"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tv_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/unnatural_death_case_app_nwest_bengal"
            android:gravity="center_horizontal"
            android:layout_below="@+id/iv_cur"
            android:textColor="@color/text_blue"
            android:textStyle="bold"
            android:textSize="22sp"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_head"
           >

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_head"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="20dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="Password"
            app:endIconMode="password_toggle"
            android:layout_below="@+id/til_username"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_username"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:hint="@string/prompt_password"

                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>




<!--        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_head"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:autofillHints="" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_username"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_password"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="32dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:backgroundTint="#552E3A"
            android:text="@string/sign_in" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/tv_credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:textColor="@color/text_blue"
            android:text="@string/acknowledged"/>


    </RelativeLayout>

</layout>
